--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Alejandro A. Edera <aedera@sinc.unl.edu.ar>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-tensorflow = ">=2.3.1, <2.5"
+tensorflow = ">=2.3.1"
 
 [tool.poetry.dev-dependencies]
 
